# TrinityV

./: .gitignore  CMakeLists.txt  CMakePresets.json  GenerateProject-Win.bat  README.md
App/: CMakeLists.txt
App/src/: EntryPoint.cpp
Engine/: CMakeLists.txt  Engine.cpp  Engine.h
Engine/src/: Engine.h
Scripts/: GenerateProject-Mac.sh  GenerateProject-Win.bat
TrinityApp/: CMakeLists.txt
TrinityApp/src/: EntryPoint.cpp
TrinityEngine/: CMakeLists.txt
TrinityEngine/shaders/: Shader.frag  Shader.vert
TrinityEngine/src/: Engine.cpp  Engine.h
TrinityEngine/src/Device/: Device.cpp  Device.h
TrinityEngine/src/Renderer/: Model.cpp  Model.h  Pipeline.cpp  Pipeline.h  Swapchain.cpp  Swapchain.h
TrinityEngine/src/Shader/: Shader.frag  Shader.vert
TrinityEngine/src/WindowsWindow/: WindowsWindow.cpp  WindowsWindow.h
